--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "renziito/factoria",
     "type": "project",
     "require": {
-        "yiisoft/yii": "^1.1"
+        "yiisoft/yii": "^1.1",
+        "vernes/yiimailer": "^4.0"
     },
     "authors": [
         {
@@ -10,5 +11,6 @@
             "email": "sepia.aki@gmail.com"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
